--- a/vustagram/src/assets/Container.css
+++ b/vustagram/src/assets/Container.css
@@ -1,7 +1,7 @@
 .upload-image{
     width: 100%;
     height: 450px;
-    background: cornflowerblue;
+    /*background: cornflowerblue;*/
     background-size : cover;
 }
 .filters{
